add E-Books link

--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
-Rust Programming Language Taiwan Community
-
-<a href="https://github.com/taiwan/rust/">GitHub repo</a>
+<header>
+  <h1>Rust Programming Language Taiwan Community</h1>
+</header>
+<main>
+  <p>
+    <a href="http://killercup.github.io/trpl-ebook/">'The Rust Programming Language' E-Books</a>
+  </p>
+</main>
+<footer>
+  <a href="https://github.com/taiwan/rust/">GitHub repo</a>
+</footer>
