--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <p>
     <a href="http://killercup.github.io/trpl-ebook/">'The Rust Programming Language' E-Books</a>
   </p>
+  <p>
+    <a href="http://rustbyexample.com/">Rust by Example</a>
+  </p>
 </main>
 <footer>
   <a href="https://github.com/taiwan/rust/">GitHub repo</a>
