add link of facebook group

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 </header>
 <main>
   <p>
+    <a href="https://www.facebook.com/groups/857846870916793/">Facebook Group</a>
+  </p>
+  <p>
     <a href="http://killercup.github.io/trpl-ebook/">'The Rust Programming Language' E-Books</a>
   </p>
   <p>
