add electronic.blue's Rust tutorial link

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <p>
     <a href="http://rustbyexample.com/">Rust by Example</a>
   </p>
+  <p>
+    <a href="https://electronic.blue/tags/Rust/">electronic.blue 的 Rust 基本概念介紹</a>
+  </p>
 </main>
 <footer>
   <a href="https://github.com/taiwan/rust/">GitHub repo</a>
