--- a/index.html
+++ b/index.html
@@ -1,20 +1,72 @@
-<header>
-  <h1>Rust Programming Language Taiwan Community</h1>
-</header>
-<main>
-  <p>
-    <a href="https://www.facebook.com/groups/857846870916793/">Facebook Group</a>
-  </p>
-  <p>
-    <a href="http://killercup.github.io/trpl-ebook/">'The Rust Programming Language' E-Books</a>
-  </p>
-  <p>
-    <a href="http://rustbyexample.com/">Rust by Example</a>
-  </p>
-  <p>
-    <a href="https://electronic.blue/tags/Rust/">electronic.blue 的 Rust 基本概念介紹</a>
-  </p>
-</main>
-<footer>
-  <a href="https://github.com/taiwan/rust/">GitHub repo</a>
-</footer>
+<!doctype html>
+<html lang="zh-TW">
+<head>
+	<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+	<title>Rust 程式語言台灣社群</title>
+	<link rel="stylesheet" href="
+https://cdnjs.cloudflare.com/ajax/libs/kule.lazy/3.1.171101/css/kule-lazy.min.css">
+	<link rel="stylesheet" href="
+https://cdnjs.cloudflare.com/ajax/libs/kule.lazy/3.1.171101/css/kule-theme-default.min.css">
+	<script src="
+https://cdnjs.cloudflare.com/ajax/libs/kule.lazy/3.1.171101/js/kule.urbrowser.min.js"></script>
+	<style>
+		.card {
+			margin-bottom: 10px !important; /* for padding between cards */
+		}
+		.card a {
+			color: #45a7b9;
+		}
+		.padding {
+			height: 6px;
+		}
+	</style>
+	<script>
+		
+	</script>
+</head>
+<body>
+	<div class="container" id="cards">
+		<div class="columns-12">
+			<div class="col-lg-offset-3 col-md-offset-2 col-lg-6 col-md-8 col-sm-12 col-xs-12 col-8">
+				<div id="title">
+					<h1>Rust.tw</h1>
+					<p class="description">Rust Programming Language Taiwan Group</p>
+				</div>
+				<div class="padding"></div>
+				<div class="card">
+					<div class="card-box">
+						<h4><a href="https://www.facebook.com/groups/857846870916793/">Facebook 討論區</a></h4>
+						<p></p>
+					</div>
+				</div>
+				<div class="card">
+					<div class="card-box">
+						<h4><a href="https://doc.rust-lang.org/nightly/book/">'The Rust Programming Language' E-Books</a></h4>
+						<p>官方教學文件。</p>
+					</div>
+				</div>
+				<div class="card">
+					<div class="card-box">
+						<h4><a href="http://rustbyexample.com/">Rust by Example</a></h4>
+						<p>藉由範例學 Rust。</p>
+					</div>
+				</div>
+				<div class="card">
+					<div class="card-box">
+						<h4><a href="https://electronic.blue/tags/Rust/">electronic.blue 的 Rust 基本概念介紹</a></h4>
+						<p>寫給 C++ 開發者的簡介。</p>
+					</div>
+				</div>
+				<div class="card">
+					<div class="card-box align-center">
+						<h4><a href="https://github.com/taiwan/rust/issues" class="text-note">歡迎提供其他資源...</a></h4>
+					</div>
+				</div>
+				<hr />
+				<p class="align-center"><a href="https://github.com/taiwan/rust/">GitHub Repo</a> / 使用 <a href="http://www.kule.tw/">Kule Lazy</a></p>
+			</div>
+		</div>
+	</div>
+</body>
+</html>
