--- a/index.html
+++ b/index.html
@@ -2,18 +2,31 @@
   <h1>Rust Programming Language Taiwan Community</h1>
 </header>
 <main>
-  <p>
-    <a href="https://www.facebook.com/groups/857846870916793/">Facebook Group</a>
-  </p>
-  <p>
-    <a href="http://killercup.github.io/trpl-ebook/">'The Rust Programming Language' E-Books</a>
-  </p>
-  <p>
-    <a href="http://rustbyexample.com/">Rust by Example</a>
-  </p>
-  <p>
-    <a href="https://electronic.blue/tags/Rust/">electronic.blue 的 Rust 基本概念介紹</a>
-  </p>
+  <section>
+    <h2>英文資源</h2>
+    <div lang="en">
+      <p>
+        <a href="http://rustbyexample.com/">Rust by Example</a>
+      </p>
+      <p>
+        <a href="http://killercup.github.io/trpl-ebook/">'The Rust Programming Language' E-Books</a>
+      </p>
+    </div>
+  </section>
+  <section>
+    <h2>中文資源</h2>
+    <div>
+      <p>
+        <a href="https://www.facebook.com/groups/857846870916793/">Facebook Group</a>
+      </p>
+      <p>
+        <a href="https://askeing.github.io/rust-book/">繁體中文 Rust Book</a>
+      </p>
+      <p>
+        <a href="https://electronic.blue/tags/Rust/">electronic.blue 的 Rust 基本概念介紹</a>
+      </p>
+    </div>
+  </section>
 </main>
 <footer>
   <a href="https://github.com/taiwan/rust/">GitHub repo</a>
