--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <header>
   <h1>Rust Programming Language Taiwan Community</h1>
+  <p class="slogan">速度飛快、記憶體不再錯誤、Thread 絕對安全</p>
 </header>
 <main>
   <section>
