--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
         <a href="https://www.facebook.com/groups/857846870916793/">Facebook Group</a>
       </p>
       <p>
+        <a href="https://discuss.rust-lang.tw">Discuss 討論區</a>
+      </p>
+      <p>
+        <a href="https://t.me/rust_tw">Telegram Group</a>
+      </p>
+      <p>
         <a href="https://askeing.github.io/rust-book/">繁體中文 Rust Book</a>
       </p>
       <p>
