--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         <a href="https://www.facebook.com/groups/857846870916793/">Facebook Group</a>
       </p>
       <p>
-        <a href="https://discuss.rust-lang.tw">Discuss 討論區</a>
+        <a href="https://t.me/rust_tw">Telegram 群組</a>
       </p>
       <p>
-        <a href="https://t.me/rust_tw">Telegram Group</a>
+        <a href="https://discuss.rust-lang.tw">Discuss 討論區</a>
       </p>
       <p>
         <a href="https://askeing.github.io/rust-book/">繁體中文 Rust Book</a>
